# llmfy

./: .gitignore  CLAUDE.md  FULL_ASSESSMENT_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_FOR_10_10.md  LICENSE  PROCESSING_RESULTS.md  QUALITY_UPDATE_SUMMARY.md  README.md  RESEARCH_IMPLEMENTATION_SUMMARY.md  SEARCH_PRECISION_EVALUATION.md  SETUP_COMPLETE.md  SMART_INGESTION_GUIDE.md  __init__.py  blind_knowledge_test.md  blind_test_evaluation.md  codex_report.md  cost_analysis.py  debug_chunks.py  extract_chunks.py  ingest_batch.sh  list_collections.py  list_kb_contents.py  llmfy  llmfy.py  llmfy_cache.py  llmfy_ingest.py  llmfy_quickstart.py  llmfy_validator.py  migrate_to_openai.py  process_log.txt  process_ui_guide.py  pyproject.toml  requirements.txt  run_blind_test.py  setup.py  test_new_scorer.py  test_search_precision.py  test_setup.py
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
blind_test/: BLIND_TEST_INSTRUCTIONS.md  README_BLIND_TEST.md  quality_control_chunks.json  quality_control_chunks.txt
config/: llmfy_config.yaml  nexus_config.yaml
docs/: PREPROCESSING_IMPROVEMENTS.md  QUALITY_INSIGHTS.md
src/core/: chunk_optimizer.py  config.py  data_assessor.py  document_loader.py  embedding_generator.py  llmfy_pipeline.py  pipeline.py  processing_planner.py  semantic_chunker.py  smart_ingestion.py  text_processor.py  text_processor_v2.py  vector_store.py
src/embeddings/: hybrid_embedder.py  hybrid_embedder_old.py
src/evaluation/: __init__.py  blind_test.py
src/preprocessors/: __init__.py  markdown_converter.py
src/processing/: semantic_linker.py
src/quality/: quality_enhancer.py  quality_enhancer_v2.py  quality_scorer.py  quality_scorer_v2.py
src/search/: __init__.py  knowledge_search.py  unified_search.py
tests/: conftest.py  test_quality_analyzer_v2.py  test_quality_scorer_v2.py  test_text_processor_v2.py
