[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llmfy"
version = "0.1.0"
description = "Quality-first document processing pipeline"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="llmfy"}]

[tool.setuptools.packages.find]
where = ["src"]

