[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llmfy"
version = "0.1.0"

description = "Quality-first document processing toolkit"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
llmfy = "llmfy:main"

[tool.setuptools.packages.find]
include = ["src*"]

